# TCP-Client-Server-Project

./: .gitignore  connectionConf.json
.cache/clangd/index/: clientMain.cpp.87389125DFDA7BE1.idx  dataConverter.hpp.5E561DEA9073A1AD.idx  exampleSimModelWrapper.hpp.7E5D1EC9EC74F3CC.idx  exampleSimModelWrapper1.hpp.0088785C06EE61F0.idx  messageHandler.cpp.50EEF06FD01D0E96.idx  messageHandler.hpp.43D3654AF1352119.idx  modelManager.cpp.249FC386DB7D2AA5.idx  modelManager.hpp.BE6451EAA4276CB5.idx  modelWrapperClass.hpp.77E19DB0F8F86092.idx  qemuClientObject.cpp.2E9D669268CED9DB.idx  qemuClientObject.hpp.1CEC8AD6F9966BBD.idx  qemuM1553Setup.cpp.846ACD8E610E7280.idx  qemuM1553Setup.hpp.F98519464AEBC34F.idx
client/: CMakeLists.txt
client/include/: clientObject.hpp
client/scripts/: run.bat
client/src/: clientMain.cpp  clientObject.cpp
common/include/: messageHandler.hpp  setup.hpp
common/src/: messageHandler.cpp  setup.cpp
qemuM1553Handler/client/: CMakeLists.txt
qemuM1553Handler/client/include/: qemuClientObject.hpp  qemuM1553Setup.hpp
qemuM1553Handler/client/scripts/: clean.bat
qemuM1553Handler/client/src/: clientMain.cpp  qemuClientObject.cpp  qemuM1553Setup.cpp
qemuM1553Handler/server/: CMakeLists.txt
qemuM1553Handler/server/include/: server.hpp
qemuM1553Handler/server/scripts/: build.bat
qemuM1553Handler/server/src/: server.cpp  serverMain.cpp
server/: CMakeLists.txt
server/include/: serverObject.hpp
server/scripts/: clean.bat  run.bat
server/src/: serverMain.cpp  serverObject.cpp
